[gd_scene load_steps=7 format=3 uid="uid://bx8ipuax6vm6d"]

[ext_resource type="Script" path="res://Scripts/SpawnAliens.gd" id="1_kn11f"]
[ext_resource type="Texture2D" uid="uid://mivf7iwlriix" path="res://assets/TileSheet_2.png" id="1_ytlo1"]
[ext_resource type="Script" path="res://Scripts/BackGround.gd" id="3_c05vl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_prr8r"]
texture = ExtResource("1_ytlo1")
texture_region_size = Vector2i(60, 60)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_wg1aa"]
tile_size = Vector2i(60, 60)
sources/2 = SubResource("TileSetAtlasSource_prr8r")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgfj1"]
size = Vector2(14, 511)

[node name="SpawnAliens" type="Node2D"]
script = ExtResource("1_kn11f")
y_placement = Array[int]([2, 3])

[node name="BackGround" type="TileMap" parent="."]
tile_set = SubResource("TileSet_wg1aa")
format = 2
layer_0/tile_data = PackedInt32Array(327687, 262146, 0, 327685, 262146, 0, 327683, 262146, 0, 327681, 262146, 0, 393215, 262146, 0, 327678, 262146, 0, 196606, 262146, 0, 65534, 262146, 0, -1, 262146, 0, -65535, 262146, 0, -65533, 262146, 0, -65531, 262146, 0, -65529, 262146, 0, 9, 262146, 0, 65545, 262146, 0, 196617, 262146, 0, 327689, 262146, 0, 458750, 262146, 0, 458751, 262146, 0, 393216, 262146, 0, 393217, 262146, 0, 393218, 262146, 0, 393219, 262146, 0, 393220, 262146, 0, 393221, 262146, 0, 393222, 262146, 0, 393223, 262146, 0, 393224, 262146, 0, 393225, 262146, 0, 393226, 262146, 0, 393227, 262146, 0, 393228, 262146, 0, 393229, 262146, 0, 393230, 262146, 0, 393231, 262146, 0, 327695, 262146, 0, 262159, 262146, 0, 196623, 262146, 0, 131087, 262146, 0, 65551, 262146, 0, 15, 262146, 0, -65521, 262146, 0, -131057, 262146, 0, -131058, 262146, 0, -131059, 262146, 0, -131060, 262146, 0, -131061, 262146, 0, -131062, 262146, 0, -131063, 262146, 0, -131064, 262146, 0, -131065, 262146, 0, -131066, 262146, 0, -131067, 262146, 0, -131068, 262146, 0, -131069, 262146, 0, -131070, 262146, 0, -131071, 262146, 0, -131072, 262146, 0, -65537, 262146, 0, -65538, 262146, 0, 393214, 262146, 0, 262142, 262146, 0, 327680, 262146, 0, 327682, 262146, 0, 327684, 262146, 0, 327686, 262146, 0, 327688, 262146, 0, 131070, 262146, 0, -65536, 262146, 0, -65534, 262146, 0, -65532, 262146, 0, -65530, 262146, 0, -65528, 262146, 0, 262153, 262146, 0, 131081, 262146, 0, -2, 262146, 0, -65527, 262146, 0, -65526, 262146, 0, 10, 262146, 0, 65546, 262146, 0, 131082, 262146, 0, 196618, 262146, 0, 262154, 262146, 0, 327690, 262146, 0, -65525, 262146, 0, 11, 262146, 0, 65547, 262146, 0, 131083, 262146, 0, 196620, 262146, 0, 262156, 262146, 0, 327692, 262146, 0, -65524, 262146, 0, 12, 262146, 0, 65548, 262146, 0, 196619, 262146, 0, 262155, 262146, 0, 327691, 262146, 0, 131084, 262146, 0, -65523, 262146, 0, 13, 262146, 0, 65549, 262146, 0, 131085, 262146, 0, 196621, 262146, 0, 262157, 262146, 0, 327693, 262146, 0, 327694, 262146, 0, 262158, 262146, 0, 196622, 262146, 0, 131086, 262146, 0, 65550, 262146, 0, 14, 262146, 0, -65522, 262146, 0, -65539, 262146, 0, -3, 262146, 0, 65533, 262146, 0, 131069, 262146, 0, 196605, 262146, 0, 262141, 262146, 0, 327677, 262146, 0, 393213, 262146, 0, 458749, 262146, 0, -65540, 262146, 0, -4, 262146, 0, 65532, 262146, 0, 131068, 262146, 0, 196604, 262146, 0, 262140, 262146, 0, 327676, 262146, 0, 393212, 262146, 0, 458748, 262146, 0)
layer_1/tile_data = PackedInt32Array(262153, 131074, 0, 131081, 131074, 0, 65545, 196610, 0, 196617, 196610, 0, 9, 131074, 0, 327688, 131074, 1342177280, 327686, 131074, 1342177280, 327687, 196610, 1342177280, 327685, 196610, 1342177280, 327684, 131074, 1342177280, 327683, 196610, 1342177280, 327682, 131074, 1342177280, 327681, 196610, 1342177280, 327680, 131074, 1342177280, 393215, 196610, 1342177280, 327678, 196610, 805306368, 196606, 196610, 805306368, 65534, 196610, 805306368, 262142, 131074, 805306368, 131070, 131074, 805306368, -1, 196610, 1610612736, -65536, 131074, 1610612736, -65535, 196610, 1610612736, -65534, 131074, 1610612736, -65533, 196610, 1610612736, -65532, 131074, 1610612736, -65531, 196610, 1610612736, -65530, 131074, 1610612736, -65529, 196610, 1610612736, -65528, 131074, 1610612736)
script = ExtResource("3_c05vl")

[node name="Timer" type="Timer" parent="."]
wait_time = 9.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(615, 158.5)
shape = SubResource("RectangleShape2D_lgfj1")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
